--- a/css/custom.css
+++ b/css/custom.css
@@ -1,89 +1,89 @@
 body {
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin:0;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin:0;
 }
 
 body h1 {
-    color: white;
+  color: white;
 }
 
 .container {
-    background-color:black;
+  background-color:black;
 }
 
 #profile-circle {
-    margin-left: 5vw;
-    margin-top: 2vh;
-    position: relative;
-    border-radius: 50%;
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
-    background-color: rgb(0, 0, 0);
+  margin-left: 5vw;
+  margin-top: 2vh;
+  position: relative;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
 }
 
 #headshot {
-    height: auto;
-    width: 100%;
-    bottom: -auto;
-    position:relative;
-    object-fit:cover;
+  height: auto;
+  width: 100%;
+  bottom: -auto;
+  position:relative;
+  object-fit:cover;
 }
 
 #profile-text {
-    margin-top: 2vh;
-    background-color:rgb(0, 0, 0);
-    color: white;
-    text-align: center;
+  margin-top: 2vh;
+  background-color:rgb(0, 0, 0);
+  color: white;
+  text-align: center;
 }
 
 .hero {
-    width: 100%;
-    box-sizing: border-box;
-    margin: 0%;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0%;
 }
 
 .social-icon {
-    display: inline-block; margin: 0 10px;
+  display: inline-block; margin: 0 10px;
 }
 
 .about-text {
-    padding-top: 5%;
-    text-align: center;
-    color: white;
+  padding-top: 5%;
+  text-align: center;
+  color: white;
 }
 
 .about-text p {
-    font-size: 110%;
+  font-size: 110%;
 }
 
 h3 {
-    color: #1EAEDB;
-    text-align: center;
+  color: #1EAEDB;
+  text-align: center;
 }
 
 .boxbox {
-    padding-bottom: 10%;;
+  padding-bottom: 10%;;
 }
 
 .project {
-    object-fit:fill;
-    max-width:100%;
-    max-height: auto;
-    transform: skewX(-5deg);
+  object-fit:fill;
+  max-width:100%;
+  max-height: auto;
+  transform: skewX(-5deg);
 }
 
 #contact {
-    margin-bottom: 5vh;
+  margin-bottom: 5vh;
 }
 /* Larger than mobile */
 @media (min-width: 400px) {
-    #profile-text {
-        margin-top: 10vh;
-    }
+  #profile-text {
+      margin-top: 10vh;
+  }
 }
 
 /* Larger than phablet */
@@ -96,11 +96,11 @@ h3 {
 
 /* Larger than desktop */
 @media (min-width: 1000px) {
-    .parallellogram {
-        transform: rotate(90deg);
-        display:inline-block;
-        margin-left: 60%;
-    }
+  .parallellogram {
+      transform: rotate(90deg);
+      display:inline-block;
+      margin-left: 60%;
+  }
 
 
 
@@ -111,78 +111,82 @@ h3 {
 
 
 input {
-    position: absolute;
-    opacity: 0;
-    z-index: -1;
-  }
-  
-  .row {
-    display: flex;
-  }
-  .row .col {
-    flex: 1;
-  }
-  .row .col:last-child {
-    margin-left: 1em;
-  }
-  
-  /* Accordion styles */
-  .tabs {
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
-  }
-  
-  .tab {
-    width: 100%;
-    color: white;
-    overflow: hidden;
-  }
-  .tab-label {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-    background: #2c3e50;
-    font-weight: bold;
-    cursor: pointer;
-    /* Icon */
-  }
-  .tab-label:hover {
-    background: #1a252f;
-  }
-  .tab-label::after {
-    content: "❯";
-    width: 1em;
-    height: 1em;
-    text-align: center;
-    transition: all 0.35s;
-  }
-  .tab-content {
-    max-height: 0;
-    padding: 0 1em;
-    color: #ffffff;
-    background: rgb(0, 0, 0);
-    transition: all 0.35s;
-  }
-  .tab-close {
-    display: flex;
-    justify-content: flex-end;
-    padding: 1em;
-    font-size: 0.75em;
-    background: #2c3e50;
-    cursor: pointer;
-  }
-  .tab-close:hover {
-    background: #1a252f;
-  }
-  
-  input:checked + .tab-label {
-    background: #1a252f;
-  }
-  input:checked + .tab-label::after {
-    transform: rotate(90deg);
-  }
-  input:checked ~ .tab-content {
-    max-height: 100vh;
-    padding: 1em;
-  }
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+
+.row {
+  display: flex;
+}
+.row .col {
+  flex: 1;
+}
+.row .col:last-child {
+  margin-left: 1em;
+}
+
+/* Accordion styles */
+.tabs {
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+}
+
+.tab {
+  width: 100%;
+  color: white;
+  overflow: hidden;
+}
+.tab-label {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  background: #2c3e50;
+  font-weight: bold;
+  cursor: pointer;
+  /* Icon */
+}
+.tab-label:hover {
+  background: #1a252f;
+}
+.tab-label::after {
+  content: "❯";
+  width: 1em;
+  height: 1em;
+  text-align: center;
+  transition: all 0.35s;
+}
+.tab-content {
+  max-height: 0;
+  padding: 0 1em;
+  color: #ffffff;
+  background: rgb(0, 0, 0);
+  transition: all 0.35s;
+}
+.tab-close {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1em;
+  font-size: 0.75em;
+  background: #2c3e50;
+  cursor: pointer;
+}
+.tab-close:hover {
+  background: #1a252f;
+}
+
+input:checked + .tab-label {
+  background: #1a252f;
+}
+input:checked + .tab-label::after {
+  transform: rotate(90deg);
+}
+input:checked ~ .tab-content {
+  max-height: 100vh;
+  padding: 1em;
+}
+
+#lastcontainer {
+    padding-bottom: 5%;
+}
