--- a/css/custom.css
+++ b/css/custom.css
@@ -28,7 +28,7 @@ body h1 {
   align-items: center;
 }
 
-#profile-circle {
+.profile-circle {
   margin-right: 2vw;
   margin-left: 3vw;
   margin-top: 5vh;
@@ -37,13 +37,6 @@ body h1 {
   width: 300px;
   height: 300px;
   overflow: hidden;
-  background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(0, 225, 255, 0.24));
-}
-
-.profile-circle::before {
-  content: '';
-  display: block;
-  padding-bottom: 100%;
 }
 
 #headshot {
@@ -156,22 +149,15 @@ h3 {
     align-items: center;
   }
   
-  #profile-circle {
+  .profile-circle {
     margin-right: 2vw;
-    margin-left: 3vw;
+    margin-left: 5vw;
     margin-top: 10vh;
     position: relative;
     border-radius: 50%;
     width: 300px;
     height: 300px;
     overflow: hidden;
-    background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(0, 162, 255, 0.24));
-  }
-  
-  .profile-circle::before {
-    content: '';
-    display: block;
-    padding-bottom: 100%;
   }
   
   #headshot {
@@ -184,9 +170,9 @@ h3 {
   
   #profile-right {
     margin-top: 12vh;
-    margin-left: 3vw;
+    margin-left: 9vw;
     margin-right: 2vw;
-    background-color:rgb(0, 0, 0);
+    background-color:rgba(0, 0, 0, 0);
     color: white;
     text-align: center;
   }
